Put extra suggestions by @agraul
Co-authored-by: Alexander Graul <agraul@suse.com>

--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -95,15 +95,15 @@ This method is not recommended nor supported and exists for development purposes
 Set [option]``web.ssh_use_salt_thin`` to `true` in the [path]``/etc/rhn/rhn.conf`` configuration file.
 ====
 
-== Salt Bundle functionality extension with PIP modules
+== Extending Salt Bundle functionality with Python packages using pip
 
-The Salt Bundle includes [literal]``PIP`` Python module to make it possible to extend the functionality of the bundled Salt Minion with extra Python modules.
+The Salt Bundle includes [literal]``pip`` to make it possible to extend the functionality of the bundled Salt Minion with extra Python packages.
 
 By default, [command]``salt <minion_id> pip.install <package-name>`` installs the Python package specified by [literal]``<package_name>`` into [path]``/var/lib/venv-salt-minion/local``.
 
 [NOTE]
 ====
-In case if [path]``/var/lib/venv-salt-minion/local`` is not applicable for some reasons and the other location for the modules is required the destination path can be overridden by setting [literal]``VENV_PIP_TARGET`` environment variable for the [literal]``venv-salt-minion.service``.
+If needed, the path [path]``/var/lib/venv-salt-minion/local`` can be overridden by setting the [literal]``VENV_PIP_TARGET`` environment variable for the [literal]``venv-salt-minion.service``.
 It is recommended to use systemd drop-in config file for the service. It could be done with the config file [path]``/etc/systemd/system/venv-salt-minion.service.d/10-pip-destination.conf``:
 ----
 [Service]
