--- a/modules/client-configuration/pages/clients-almalinux.adoc
+++ b/modules/client-configuration/pages/clients-almalinux.adoc
@@ -8,7 +8,7 @@ ifeval::[{suma-content} == true]
 [IMPORTANT]
 ====
 * {almalinux} repository URLs are available from {scc}
-* packages and metadata are provided by AlmaLinux OS Foundation, not by {suse}
+* Packages and metadata are provided by AlmaLinux OS Foundation, not by {suse}
 * For supported products, see the support table and the release notes
 ====
 endif::[]
