centos resources info

--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -3,11 +3,27 @@
 
 This section contains information about registering traditional and Salt clients running {centos} operating systems.
 
+ifeval::[{suma-content} == true]
+// Use list format: repository URLs / packages and metadata / version info
+// Do we need to provide special info for uyuni users?
+[IMPORTANT]
+====
+* {centos} repository URLs are available from {scc}
++
+// Check the following statement!
+* Packages and metadata are provided by CentOS, not by {suse}
+* For supported products, see the support table and the release notes
+====
+endif::[]
+
+////
+This info probably is outdated, disabling
 [IMPORTANT]
 ====
 {centos} clients are based on {centos} and are unrelated to {sleses}, RES, {redhat}, or {es}.
 You are responsible for arranging access to {centos} base media repositories and {centos} installation media, as well as connecting {productname} Server to the {centos} content delivery network.
 ====
+////
 
 [NOTE]
 ====
