--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -403,7 +403,7 @@ Only trusted software can be installed on clients.
 [IMPORTANT]
 ====
 Trusting a GPG key is important for security on clients.
-It is the task of the admin to decide which keys are needed and can be trusted.
+It is the task of the administrator to decide which keys are needed and can be trusted.
 Because a software channel cannot be used when the GPG key is not trusted, the decision of assigning a channel to a client depends on the decision of trusting the key.
 ====
 
