--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -187,7 +187,7 @@ It is the task of the administrator to decide which keys are needed and can be t
 Because a software channel cannot be used when the GPG key is not trusted, the decision of assigning a channel to a client depends on the decision of trusting the key.
 ====
 
-For more information about GPG keys, see see xref:client-configuration:gpg-keys.adoc[].
+For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
 
 
 
