--- a/modules/client-configuration/pages/clients-almalinux.adoc
+++ b/modules/client-configuration/pages/clients-almalinux.adoc
@@ -148,14 +148,27 @@ For more information on activation keys, see xref:client-configuration:activatio
 
 
 
-ifeval::[{uyuni-content} == true]
+//ifeval::[{uyuni-content} == true]
 
-== Trust GPG Keys on Clients
+//== Trust GPG Keys on Clients
 
-include::snippets/trust_gpg.adoc[]
+//include::snippets/trust_gpg.adoc[]
 
-endif::[]
+//endif::[]
 
+== Manage GPG Keys
+
+Clients use GPG keys to check the authenticity of software packages before they are installed. 
+Only trusted software can be installed on clients.
+
+[IMPORTANT]
+====
+Trusting a GPG key is important for security on clients.
+It is the task of the adminstrator to decide which keys are needed and can be trusted.
+Because a software channel cannot be used when the GPG key is not trusted, the decision of assigning a channel to a client depends on the decision of trusting the key.
+====
+
+For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
 
 
 == Register Clients
