--- a/modules/client-configuration/pages/clients-sle.adoc
+++ b/modules/client-configuration/pages/clients-sle.adoc
@@ -171,9 +171,23 @@ Synchronization can sometimes take several hours.
 
 
 ifeval::[{uyuni-content} == true]
-== Trust GPG Keys on Clients
+//== Trust GPG Keys on Clients
 
-include::snippets/trust_gpg.adoc[]
+//include::snippets/trust_gpg.adoc[]
+
+== Manage GPG Keys
+
+Clients use GPG keys to check the authenticity of software packages before they are installed.
+Only trusted software can be installed on clients.
+
+[IMPORTANT]
+====
+Trusting a GPG key is important for security on clients.
+It is the task of the administrator to decide which keys are needed and can be trusted.
+Because a software channel cannot be used when the GPG key is not trusted, the decision of assigning a channel to a client depends on the decision of trusting the key.
+====
+
+For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
 
 [NOTE]
 ====
@@ -181,7 +195,7 @@ Use the same GPG key for both {sles}{nbsp}15 and {sles}{nbsp}12 clients.
 The correct key is called ``sle12-gpg-pubkey-39db7c82.key``.
 ====
 
-endif::[]
+//endif::[]
 
 
 
