--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -113,5 +113,5 @@ Environment=VENV_PIP_TARGET=/new/path/local/venv-salt-minion/pip
 
 [IMPORTANT]
 ====
-The Salt Bundle does not maintain the modules installed with [literal]``PIP``. In case of updating the Salt Bundle it is possible that modules should be reinstalled, for example on updating the Salt Bundle with updated Python inside.
+The Python packages installed through [literal]``pip`` are not changing on updating the Salt Bundle. To ensure that such packages are available and functional after an update, it is recommended to install them with a Salt state that is applied after Salt Bundle updates.
 ====
