--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -95,7 +95,7 @@ This method is not recommended nor supported and exists for development purposes
 Set [option]``web.ssh_use_salt_thin`` to `true` in the [path]``/etc/rhn/rhn.conf`` configuration file.
 ====
 
-== Extending Salt Bundle functionality with Python packages using pip
+== Extend Salt Bundle with Python packages using pip
 
 The Salt Bundle includes [literal]``pip`` to make it possible to extend the functionality of the bundled Salt Minion with extra Python packages.
 
