--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -104,7 +104,8 @@ By default, [command]``salt <minion_id> pip.install <package-name>`` installs th
 [NOTE]
 ====
 If needed, the path [path]``/var/lib/venv-salt-minion/local`` can be overridden by setting the [literal]``VENV_PIP_TARGET`` environment variable for the [literal]``venv-salt-minion.service``.
-It is recommended to use systemd drop-in config file for the service. It could be done with the config file [path]``/etc/systemd/system/venv-salt-minion.service.d/10-pip-destination.conf``:
+It is recommended to use a systemd drop-in configuration file for the service.
+It could be done with the configuration file [path]``/etc/systemd/system/venv-salt-minion.service.d/10-pip-destination.conf``:
 ----
 [Service]
 Environment=VENV_PIP_TARGET=/new/path/local/venv-salt-minion/pip
