--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -114,5 +114,6 @@ Environment=VENV_PIP_TARGET=/new/path/local/venv-salt-minion/pip
 
 [IMPORTANT]
 ====
-The Python packages installed through [literal]``pip`` are not changing on updating the Salt Bundle. To ensure that such packages are available and functional after an update, it is recommended to install them with a Salt state that is applied after Salt Bundle updates.
+The Python packages installed through [literal]``pip`` are not changing on updating the Salt Bundle.
+To ensure that such packages are available and functional after an update, it is recommended to install them with a Salt state that is applied after Salt Bundle updates.
 ====
