Add Salt Bundle functionality extension with PIP modules (#1674)
* Add a note about using PIP with the Salt Bundle
* Update modules/client-configuration/pages/contact-methods-saltbundle.adoc
Co-authored-by: Alexander Graul <agraul@suse.com>
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -94,3 +94,26 @@ Using `salt-thin` can be enabled as a fallback method, but it requires Python 3 
 This method is not recommended nor supported and exists for development purposes only.
 Set [option]``web.ssh_use_salt_thin`` to `true` in the [path]``/etc/rhn/rhn.conf`` configuration file.
 ====
+
+== Extend Salt Bundle with Python packages using pip
+
+The Salt Bundle includes [literal]``pip`` to make it possible to extend the functionality of the bundled Salt Minion with extra Python packages.
+
+By default, [command]``salt <minion_id> pip.install <package-name>`` installs the Python package specified by [literal]``<package_name>`` into [path]``/var/lib/venv-salt-minion/local``.
+
+[NOTE]
+====
+If needed, the path [path]``/var/lib/venv-salt-minion/local`` can be overridden by setting the [literal]``VENV_PIP_TARGET`` environment variable for the [literal]``venv-salt-minion.service``.
+It is recommended to use a systemd drop-in configuration file for the service.
+It could be done with the configuration file [path]``/etc/systemd/system/venv-salt-minion.service.d/10-pip-destination.conf``:
+----
+[Service]
+Environment=VENV_PIP_TARGET=/new/path/local/venv-salt-minion/pip
+----
+====
+
+[IMPORTANT]
+====
+The Python packages installed through [literal]``pip`` are not changing on updating the Salt Bundle.
+To ensure that such packages are available and functional after an update, it is recommended to install them with a Salt state that is applied after Salt Bundle updates.
+====
