--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -143,8 +143,12 @@ mkdir -p /etc/sysconfig/rhn/allowed-actions/script
 touch /etc/sysconfig/rhn/allowed-actions/script/run
 ----
 
+[IMPORTANT]
+====
 For Salt clients, remote commands are run from the [path]``/tmp/`` directory on the client.
 To ensure that remote commands work accurately, do not mount ``/tmp`` with the [parameter]``noexec`` option.
+For more information, see xref:client-configuration:tshoot-clients.adoc#_mounting_tmp_with_noexec[Troubleshooting Clients]
+====
 
 [WARNING]
 ====
