--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -90,9 +90,9 @@ For more information, see xref:client-configuration:bootstrap-repository.adoc#_p
 
 [IMPORTANT]
 ====
-Salt SSH is using [path]``/var/tmp`` to deploy Salt Bundle to and execute the Salt on the client with the bundled Python.
+Salt SSH is using [path]``/var/tmp`` to deploy Salt Bundle to and execute Salt commands on the client with the bundled Python.
 Therefore you must not mount [path]``/var/tmp`` with the [option]``noexec`` option.
-It is not possible to bootstrap the clients, which have [path]``/var/tmp`` mounted with [option]``noexec`` option, via {webui} as the bootstrap process is using Salt SSH to reach a client.
+It is not possible to bootstrap the clients, which have [path]``/var/tmp`` mounted with [option]``noexec`` option, with the {webui} because the bootstrap process is using Salt SSH to reach a client.
 ====
 
 [NOTE]
