Reverted PR 1600 single snippet change for two separate books.

--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -17,7 +17,263 @@ For non-{suse} operating systems, including {rhel}, {centos}, and {oracle}, only
 ====
 
 // Table with the list of the supported systems
-include::../../snippets/pages/supported-client-systems-snippet.adoc[]
+// include::../../snippets/pages/supported-client-systems-snippet.adoc[]
+
+// Revert PR 1600 
+[[supported-client-systems-snippet]]
+
+ifeval::[{suma-content} == true]
+[[mgr.support.clients]]
+[cols="1,1,1,1", options="header"]
+.Supported Client Systems
+|===
+| Operating System
+| Architecture
+| Traditional Clients
+| Salt Clients
+
+| {sle} 15
+| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {check}
+| {check}
+
+| {sle} 12
+| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {check}
+| {check}
+
+| {sle} 11
+| {x86}, {x86_64}, {ipf}, {ppc64}, {ibmz}
+| {check}
+| {check}
+
+| {sles} for SAP 15
+| {x86_64}, {ppc64le}
+| {check}
+| {check}
+
+| {sles} for SAP 12
+| {x86_64}, {ppc64le}
+| {check}
+| {check}
+
+| {micro}
+| {x86_64}, {ppc64le}, {aarch64}
+| {cross}
+| {check}
+
+| {opensuse} Leap 15
+| {x86_64}, {aarch64}
+| {check}
+| {check}
+
+| {sles} ES 8
+| {x86_64}
+| {cross}
+| {check}
+
+| {sles} ES 7
+| {x86_64}
+| {check}
+| {check}
+
+| {almalinux} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {amazon} 2
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {centos} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {centos} 7
+| {x86_64}, {aarch64}
+| {check}
+| {check}
+
+| {debian} 10
+| {x86_64}
+| {cross}
+| {check}
+
+| {debian} 9
+| {x86_64}
+| {cross}
+| {check}
+
+| {oracle} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {oracle} 7
+| {x86_64}, {aarch64}
+| {check}
+| {check}
+
+| {rhel} 8
+| {x86_64}
+| {cross}
+| {check}
+
+| {rhel} 7
+| {x86_64}
+| {check}
+| {check}
+
+| {rocky} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {ubuntu} 20.04
+| {x86_64}
+| {cross}
+| {check}
+
+| {ubuntu} 18.04
+| {x86_64}
+| {cross}
+| {check}
+
+|===
+endif::[]
+
+
+ifeval::[{uyuni-content} == true]
+[[uyuni.supported.clients]]
+[cols="1,1,1,1", options="header"]
+.Supported Client Systems
+|===
+
+| Operating System
+| Architecture
+| Traditional Clients
+| Salt Clients
+
+| {sle} 15
+| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {check}
+| {check}
+
+| {sle} 12
+| {x86_64}, {ppc64le}, {ibmz}, ARM
+| {check}
+| {check}
+
+| {sle} 11
+| {x86}, {x86_64}, {ipf}, {ppc64}, {ibmz}
+| {check}
+| {check}
+
+| {sles} for SAP 15
+| {x86_64}, {ppc64le}
+| {check}
+| {check}
+
+| {sles} for SAP 12
+| {x86_64}, {ppc64le}
+| {check}
+| {check}
+
+| {micro}
+| {x86_64}, {ppc64le}, {aarch64}
+| {cross}
+| {check}
+
+| {opensuse} Leap 15
+| {x86_64}, {aarch64}
+| {check}
+| {check}
+
+| {sles} ES 8
+| {x86_64}
+| {cross}
+| {check}
+
+| {sles} ES 7
+| {x86_64}
+| {check}
+| {check}
+
+| {alibabaclo} 2
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {almalinux} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {amazon} 2
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {centos} 8
+| {x86_64}, {ppc64le}, {aarch64}
+| {cross}
+| {check}
+
+| {centos} 7
+| {x86_64}, {ppc64le}, {aarch64}
+| {check}
+| {check}
+
+| {debian} 10
+| {x86_64}, {aarch64}, armv7l, i586
+| {cross}
+| {check}
+
+| {debian} 9
+| {x86_64}, {aarch64}, armv7l, i586
+| {cross}
+| {check}
+
+| {oracle} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {oracle} 7
+| {x86_64}, {aarch64}
+| {check}
+| {check}
+
+| {rhel} 8
+| {x86_64}
+| {cross}
+| {check}
+
+| {rhel} 7
+| {x86_64}
+| {check}
+| {check}
+
+| {rocky} 8
+| {x86_64}, {ppc64le}, {aarch64}
+| {cross}
+| {check}
+
+| {ubuntu} 20.04
+| {x86_64}
+| {cross}
+| {check}
+
+| {ubuntu} 18.04
+| {x86_64}
+| {cross}
+| {check}
+
+|===
+endif::[]
 
 When you are setting up your client hardware, you need to ensure you have enough for the operating system and for the workload you want to perform on the client, with these additions for {productname}:
 
