removed comments from nav files and fixed spacing

--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -1,6 +1,5 @@
-// Common Workflows Antora Navigation List
+// NO COMMENTS ALLOWED IN NAV LIST FILES EXCEPT THIS ONE!
 
-// PDF Common Workflows
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Common Workflows
 include::./branding/pdf/entities.adoc[]
