--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -1,5 +1,4 @@
-// Administration Guide Antora Navigation List
-// PDF Administration Guide
+// NO COMMENTS ALLOWED IN NAV LIST FILES EXCEPT THIS ONE!
 ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Administration Guide
 include::./branding/pdf/entities.adoc[]
@@ -8,78 +7,53 @@ endif::[]
 
 
 * xref:admin-overview.adoc[Administration Guide]
-// Topics are listed in alphabetical order
-// Actions
 ** xref:actions.adoc[Actions]
-// Ansible
+
 ifeval::[{suma-content} == true]
 ** xref:ansible-integration.adoc[Ansible Integration]
 *** xref:ansible-compliance-as-code.adoc[Compliance as code]
 **** xref:ansible-setup-control-node.adoc[Setup Ansible control node]
 endif::[]
-// Authentication methods
+
 ** xref:auth-methods.adoc[Authentication Methods]
 *** xref:auth-methods-sso.adoc[Authentication With SSO]
 *** xref:auth-methods-pam.adoc[Authentication With PAM]
-// Backing up
 ** xref:backup-restore.adoc[Backing Up and Restoring]
-// Content staging
 ** xref:content-staging.adoc[Content Staging]
-// Channel management
 ** xref:channel-management.adoc[Channel Management]
 *** xref:custom-channels.adoc[Custom Channels]
-// Content lifecycle
 ** xref:content-lifecycle.adoc[Content Lifecycle Management]
 *** xref:content-lifecycle-examples.adoc[Content Lifecycle Management Examples]
-// Disconnected setup
 ** xref:disconnected-setup.adoc[Disconnected Setup]
-// Disk space
 ** xref:space-management.adoc[Disk Space Management]
-// Image management
 ** xref:image-management.adoc[Image Management]
-// Infrastructure maintenance
 ** xref:infra-maintenance.adoc[Infrastructure Maintenance Tasks]
-// ISS
 ** xref:iss.adoc[Inter-Server Synchronization]
 *** xref:iss_v2.adoc[Inter-Server Synchronization version 2]
-// Live patching
 ** xref:live-patching.adoc[Live Patching]
 *** xref:live-patching-channel-setup.adoc[Channel Setup for Live Patching]
 *** xref:live-patching-sles15.adoc[Live Patching on SLES 15]
 *** xref:live-patching-sles12.adoc[Live Patching on SLES 12]
-// Maintenance windows
 ** xref:maintenance-windows.adoc[Maintenance Windows]
-// mgr-sync
 ** xref:mgr-sync.adoc[mgr-sync Command]
-// Monitoring
 ** xref:monitoring.adoc[Monitoring with Prometheus and Grafana]
-// Organizations
 ** xref:organizations.adoc[Organizations]
-// Patch management
 ** xref:patch-management.adoc[Patch Management]
-// Reports
 ** xref:reports.adoc[Reports Generation]
-// Security
 ** Security
 *** xref:master-fingerprint.adoc[Master Fingerprint]
 *** xref:repo-metadata.adoc[Repository Metadata]
 *** xref:mirror-sources.adoc[Mirror Sources]
 *** xref:openscap.adoc[OpenSCAP]
 *** xref:auditing.adoc[Auditing Packages]
-// SSL certificates
 ** xref:ssl-certs.adoc[SSL Certificates]
 *** xref:ssl-certs-selfsigned.adoc[Self-Signed SSL Certificates]
 *** xref:ssl-certs-imported.adoc[Imported SSL Certificates]
 *** xref:ssl-certs-hsts.adoc[HTTP Strict Transport Security]
-// Subscription matching
 ** xref:subscription-matching.adoc[Subscription Matching]
-// Tasks
 ** xref:task-schedules.adoc[Task Schedules]
-// Tuning changelogs
 ** xref:tuning-changelogs.adoc[Tuning Changelogs]
-// Users
 ** xref:users.adoc[Users]
-// Troubleshooting - always keep as the last chapter
 ** xref:tshoot-intro.adoc[Troubleshooting]
 *** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
 *** xref:tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
@@ -100,9 +74,9 @@ endif::[]
 *** xref:tshoot-saltboot.adoc[Troubleshooting Saltboot]
 *** xref:tshoot-sync.adoc[Troubleshooting Synchronization]
 *** xref:tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
-//
-// ==============================================
-// ==============================================
+
+
+
 // NEW Troubleshooting - always keep as the last chapter
 // HIDDEN UNTIL READY TO BE COMPLETELY MERGED
 // tshooting will be removed from otehr books
