Snippet changes (cont.)

--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -1,3 +1,6 @@
+[[trust-gpg-keys-on-clients]]
+== Trust GPG Keys on Clients
+
 Operating systems either trust their own GPG keys directly or at least ship them installed with the minimal system.
 But third party packages signed by a different GPG key need manual handling.
 The clients can be successfully bootstrapped without the GPG key being trusted.
@@ -6,13 +9,56 @@ However, you cannot install new client tool packages or update them until the ke
 Salt clients use now GPG key information entered for a software channel to manage the trusted keys.
 When a software channel with GPG key information is assigned to a client, the key gets trusted as soon as the channel is refreshed or the first package gets installed from this channel.
 
+// The meaning of the following sentence is not clear
+The GPG key URL which is set of a software channel must exist.
+In case it is a file URL, the GPG key file must be deployed on the client before the software channel is used.
+
+The GPG keys for the Client Tools Channels of {redhat} based clients are deployed on the client into [path]``/etc/pki/rpm-gpg/`` and can be referenced with file URLs.
+Same is the case with the GPG keys of  Expanded Support clients.
+Only in case a software channel is assigned to the client they will be imported and trusted by the system.
+
 [NOTE]
 ====
-If you are bootstrapping Salt clients from the {productname} {webui}, you can use a Salt state to trust the key.
-For more information on custom Salt states, see xref:salt:custom-states.adoc[].
+Because Debian based systems sign only metadata, there is typically no need to specify extra keys for single channels.
+If a user configures an own GPG key to sign the metadata as described in "Use Your Own GPG Key" in xref:administration:repo-metadata.adoc[] the deployment and trust of that key is executed automatically.
 ====
 
 
+=== User defined GPG keys
+
+Users can define their own GPG keys to be deployed to the client.
+
+By providing some pillar data and providing the GPG key files in the {salt} filesystem, they are automatically deployed to the client.
+
+These keys are deployed into [path]``/etc/pki/rpm-gpg/`` on RPM based operating systems and to [path]``/usr/share/keyrings/`` on Debian systems:
+
+Define the pillar key [literal``custom_gpgkeys`` for the client you want to deploy the key to and list the names of the key file.
+// I think the cat command is here to show the contents of the file.
+// In this case, the cat is superfluous.
+----
+cat /etc/pillar/mypillar.sls
+custom_gpgkeys:
+  - my_first_gpg.key
+  - my_second_gpgkey.gpg
+----
+
+Additionally in the {salt} filesystem create a directory named [path]``gpg`` and store there the GPG key files with the name specified in the [iteral]``custom_gpgkeys`` pillar data.
+// I think the ls command is here to show the contents of the directory.
+// In this case, the ls is superfluous.
+
+----
+ls -la /etc/salt/gpg/
+/etc/salt/gpg/my_first_gpg.key
+/etc/salt/gpg/my_second_gpgkey.gpg
+----
+
+The keys are now deployed to the client at [path]``/etc/pki/rpm-gpg/my_first_gpg.key`` and [path]``/etc/pki/rpm-gpg/my_second_gpgkey.gpg``.
+
+The last step is to add the URL to the GPG key URL field of the software channel.
+Navigate to menu:Software[Manage > Channels] and select the channel you want to modify.
+Add to [guimenu]``GPG key URL`` the value [literal]``file:///etc/pki/rpm-gpg/my_first_gpg.key``.
+
+=== GPG Keys in Bootstrap Scripts
 
 .Procedure: Trusting GPG Keys on Clients Using a Bootstrap Script
 . On the {productname} Server, at the command prompt, check the contents of the [path]``/srv/www/htdocs/pub/`` directory.
@@ -27,9 +73,10 @@ uyuni-gpg-pubkey-0d20833e.key
 +
 You do not need to delete any previously stored keys.
 
+
 [IMPORTANT]
 ====
 Trusting a GPG key is important for security on clients. 
-It is the task of the admin to decide which keys are needed and can be trusted.
-Trusting the key is done manually,  either by writing a Salt state or adding the keys to the bootstrap script.
+It is the task of the adminstrator to decide which keys are needed and can be trusted.
+Because a software channel cannot be used when the GPG key is not trusted, the decision of assigning a channel to a client depends on the decision of trusting the key.
 ====
