Backport43 - trust gpg key snippet (#1683)
* Bacporting the complete changed admonition text.

* Update modules/client-configuration/pages/snippets/trust_gpg.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -74,7 +74,6 @@ You do not need to delete any previously stored keys.
 [IMPORTANT]
 ====
 Trusting a GPG key is important for security on clients.
-It is the task of the admin to decide which keys are needed and can be trusted.
-A software channel cannot be used when a GPG key is not trusted.
-Assigning a channel to a client depends on if its GPG key has been trusted.
+It is the task of the administrator to decide which keys are needed and can be trusted.
+A software channel cannot be assigned to a client when the GPG key is not trusted.
 ====
