Extend the notes about noexec option for mounting /tmp and /var/tmp (#1677)
* Extend the note about noexec mount option
* Add important note to the Actions section
* Put an extra note about noexec to saltbundle section
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/installation/pages/client-requirements.adoc
+++ b/modules/installation/pages/client-requirements.adoc
@@ -280,6 +280,13 @@ endif::[]
 {rhel} 6, {oracle} 6, CentOS 6, {sles}-ES 6, and {ubuntu} 16.04 are end-of-life upstream and no longer supported by {suse} as client operating systems. SUSE Manager Client Tools for these operating systems are still provided from SCC for convenience.
 ====
 
+[IMPORTANT]
+====
+Salt SSH is using [path]``/var/tmp`` to deploy Salt Bundle to and execute Salt commands on the client with the bundled Python.
+Therefore you must not mount [path]``/var/tmp`` with the [option]``noexec`` option.
+It is not possible to bootstrap the clients, which have [path]``/var/tmp`` mounted with [option]``noexec`` option, with the {webui} because the bootstrap process is using Salt SSH to reach a client.
+====
+
 When you are setting up your client hardware, you need to ensure you have enough for the operating system and for the workload you want to perform on the client, with these additions for {productname}:
 
 
