Bacporting GPG snippet related changes.

--- a/modules/client-configuration/pages/clients-ubuntu-old.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu-old.adoc
@@ -5,8 +5,8 @@ This section contains information about registering Salt clients running {ubuntu
 
 ifeval::[{suma-content} == true]
 
-{productname} supports {ubuntu} 16.04 LTS, 18.04 LTS, and 20.04 LTS clients using Salt.
-For information about registering Salt clients running {ubuntu} 20.04, see xref:client-configuration:clients-ubuntu.adoc[].
+{productname} supports {ubuntu} 16.04 LTS, 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
+For information about registering Salt clients running {ubuntu} 20.04 and 22.04, see xref:client-configuration:clients-ubuntu.adoc[].
 
 endif::[]
 
@@ -198,13 +198,26 @@ Synchronization can sometimes take several hours.
 
 
 
-ifeval::[{uyuni-content} == true]
-== Trust GPG Keys on Clients
+//ifeval::[{uyuni-content} == true]
+//== Trust GPG Keys on Clients
 
-include::snippets/trust_gpg.adoc[]
+//include::snippets/trust_gpg.adoc[]
 
-endif::[]
+//endif::[]
 
+== Manage GPG Keys
+
+Clients use GPG keys to check the authenticity of software packages before they are installed.
+Only trusted software can be installed on clients.
+
+[IMPORTANT]
+====
+Trusting a GPG key is important for security on clients.
+It is the task of the administrator to decide which keys are needed and can be trusted.
+Because a software channel cannot be used when the GPG key is not trusted, the decision of assigning a channel to a client depends on the decision of trusting the key.
+====
+
+For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
 
 
 == Root Access
