--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -1,10 +1,10 @@
 [[clients-ubuntu]]
-= Registering {ubuntu} 20.04 Clients
+= Registering {ubuntu} 20.04 and 22.04 Clients
 
-This section contains information about registering Salt clients running {ubuntu} 20.04 LTS operating systems.
+This section contains information about registering Salt clients running {ubuntu} 20.04 LTS and 22.04 LTS operating systems.
 
 ifeval::[{suma-content} == true]
-{productname} supports {ubuntu} 16.04 LTS, 18.04 LTS, and 20.04 LTS clients using Salt.
+{productname} supports {ubuntu} 16.04 LTS, 18.04 LTS, 20.04 LTS and 22.04 LTS clients using Salt.
 For information about registering Salt clients running {ubuntu} 16.04 LTS and 18.04 LTS, see xref:client-configuration:clients-ubuntu-old.adoc[].
 endif::[]
 
@@ -41,6 +41,7 @@ The products you need for this procedure are:
 
 | OS Version | Product Name
 | {ubuntu} 20.04 | Ubuntu 20.04
+| {ubuntu} 22.04 | Ubuntu 22.04
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -55,6 +56,7 @@ The channels you need for this procedure are:
 
 | OS Version | Base Channel
 | {ubuntu} 20.04 | ubuntu-2004-amd64-main-amd64
+| {ubuntu} 22.04 | ubuntu-2204-amd64-main-amd64
 |===
 
 include::snippets/addchannels_vendor_cli.adoc[]
@@ -73,6 +75,22 @@ The channels you need for this procedure are:
 | OS Version | Base Channel | Main Channel | Updates Channel | Security Channel | Client Channel
 
 | {ubuntu} 20.04 | ubuntu-2004-amd64-main for amd64 | ubuntu-2004-amd64-main-uyuni | ubuntu-2004-amd64-main-updates-uyuni | ubuntu-2004-amd64-main-security-uyuni | ubuntu-2004-amd64-uyuni-client
+| {ubuntu} 22.04 | ubuntu-2204-amd64-main for amd64 | ubuntu-2204-amd64-main-uyuni | ubuntu-2204-amd64-main-updates-uyuni | ubuntu-2204-amd64-main-security-uyuni | ubuntu-2204-amd64-uyuni-client
+|===
+
+Version 20.04 also requires the Universe channels:
+
+[[ubuntu-universe-channels-cli-uyuni]]
+[cols="1,1", options="header"]
+.Ubuntu 20.04 Universe Channels - CLI
+|===
+
+| {ubuntu} 20.04           | {nbsp}
+| Universe Channel         | ubuntu-2004-amd64-universe-uyuni
+| Universe Updates Channel | ubuntu-2004-amd64-universe-updates-uyuni
+| Universe Security Updates Channel | ubuntu-2004-amd64-universe-security-uyuni
+| Universe Backports Channel | ubuntu-2004-amd64-universe-backports-uyuni
+
 |===
 
 include::snippets/addchannels_novendor_cli.adoc[]
@@ -110,14 +128,27 @@ Synchronization can sometimes take several hours.
 
 
 
-ifeval::[{uyuni-content} == true]
+//ifeval::[{uyuni-content} == true]
 
-== Trust GPG Keys on Clients
+//== Trust GPG Keys on Clients
 
-include::snippets/trust_gpg.adoc[]
+//include::snippets/trust_gpg.adoc[]
 
-endif::[]
+//endif::[]
 
+== Manage GPG Keys
+
+Clients use GPG keys to check the authenticity of software packages before they are installed.
+Only trusted software can be installed on clients.
+
+[IMPORTANT]
+====
+Trusting a GPG key is important for security on clients.
+It is the task of the administrator to decide which keys are needed and can be trusted.
+Because a software channel cannot be used when the GPG key is not trusted, the decision of assigning a channel to a client depends on the decision of trusting the key.
+====
+
+For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
 
 
 == Root Access
