Add Rocky Linux 9 client support documentation

--- a/modules/client-configuration/pages/clients-rocky.adoc
+++ b/modules/client-configuration/pages/clients-rocky.adoc
@@ -3,8 +3,8 @@
 
 This section contains information about registering Salt clients running {rocky} operating systems.
 
-Traditional clients are not available on {rocky}{nbsp}8.
-{rocky}{nbsp}8 clients are only supported as Salt clients.
+Traditional clients are not available on {rocky}.
+{rocky} clients are only supported as Salt clients.
 
 [NOTE]
 ====
@@ -65,6 +65,7 @@ The channels you need for this procedure are:
 
 | OS Version | Base Channel | Client Channel       | AppStream Channel
 | {rocky} 8 | rockylinux8      | rockylinux8-uyuni-client | rockylinux8-appstream
+| {rocky} 9 | rockylinux9      | rockylinux9-uyuni-client | rockylinux9-appstream
 |===
 
 include::snippets/addchannels_novendor_cli_multiarch.adoc[]
@@ -80,7 +81,7 @@ endif::[]
 ifeval::[{uyuni-content} == true]
 [IMPORTANT]
 ====
-For {rocky} 8 clients, add both the Base and AppStream channels.
+For {rocky} 8 and 9 clients, add both the Base and AppStream channels.
 You require packages from both channels.
 If you do not add both channels, you cannot create the bootstrap repository, due to missing packages.
 ====
@@ -94,7 +95,7 @@ This is due to the way that {rocky} manages their repositories.
 {rocky} removes older version of packages when a new version is released, while {productname} keeps all of them, regardless of age.
 ====
 
-If you are using modular channels, you must enable the Python 3.6 module stream on the client.
+If you are using modular channels with {rocky} 8, you must enable the Python 3.6 module stream on the client.
 If you do not provide Python 3.6, the installation of the [package]``spacecmd`` package will fail.
 
 include::snippets/appstream_admon.adoc[]
