--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -257,8 +257,13 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
+| {rocky} 9
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
+| {cross}
+| {check}
+
 | {rocky} 8
-| {x86_64}, {ppc64le}, {aarch64}
+| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
