--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -1,4 +1,6 @@
 // NO COMMENTS ALLOWED IN NAV LIST FILES EXCEPT THIS ONE!
+
+ifdef::backend-pdf[]
 = [.title]#{productname} {productnumber}#: Administration Guide
 include::./branding/pdf/entities.adoc[]
 :toclevels: 3
