--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -8,7 +8,7 @@ The data is made available for external Reporting Tools.
 == Architecture
 
 The main database is a PostgresDB in the {productname} Hub system.
-It stores all the information collected from all the servers, and eventually aggregates them.
+It stores all the information collected from all the servers, and aggregates them.
 Every peripheral Server has its own reporting database where the information is collected for that system.
 In summary:
 
