--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -8,11 +8,11 @@ The data is made available for external Reporting Tools.
 == Architecture
 
 The main database is a PostgresDB in the {productname} Hub system.
-It stores all the information collected from all the servers, and eventually aggregates them.
+It stores all the information collected from all the servers, and aggregates them.
 Every peripheral Server has its own reporting database where the information is collected for that system.
 In summary:
 
-- the DB in {productname} Hub stores, collects and eventually aggregates data coming from all the DBs of the peripheral Servers,
+- the DB in {productname} Hub stores, collects and aggregates data coming from all the DBs of the peripheral Servers,
 - the DB in {productname} Hub stores also its own data from the systems directly connected and managed by the Hub,
 - the DB in peripheral {productname} Server stores its own data,
 - the reporting tool can be connected either to the Hub or to any {productname} Server.
