hub reporting: more cosmetic normalization

--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -7,7 +7,7 @@ The data is made available for external Reporting Tools.
 
 == Architecture
 
-The main database is a PostgresDB in the {productname} Hub system.
+The main database is a PostgreSQL database in the {productname} Hub system.
 It stores all the information collected from all the servers, and eventually aggregates them.
 Every peripheral Server has its own reporting database where the information is collected for that system.
 In summary:
