--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -131,10 +131,23 @@ For more information on activation keys, see xref:client-configuration:activatio
 
 
 
-== Trust GPG Keys on Clients
+//== Trust GPG Keys on Clients
 
-include::snippets/trust_gpg.adoc[]
+//include::snippets/trust_gpg.adoc[]
 
+== Manage GPG Keys
+
+Clients use GPG keys to check the authenticity of software packages before they are installed.
+Only trusted software can be installed on clients.
+
+[IMPORTANT]
+====
+Trusting a GPG key is important for security on clients.
+It is the task of the administrator to decide which keys are needed and can be trusted.
+A software channel cannot be assigned to a client when the GPG key is not trusted.
+====
+
+For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
 
 
 
