--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -445,13 +445,26 @@ You need to modify the activation keys you used for RHEL systems to include the 
 
 
 
-ifeval::[{uyuni-content} == true]
-== Trust GPG Keys on Clients
+//ifeval::[{uyuni-content} == true]
+//== Trust GPG Keys on Clients
 
-include::snippets/trust_gpg.adoc[]
+//include::snippets/trust_gpg.adoc[]
 
-endif::[]
+//endif::[]
 
+== Manage GPG Keys
+
+Clients use GPG keys to check the authenticity of software packages before they are installed.
+Only trusted software can be installed on clients.
+
+[IMPORTANT]
+====
+Trusting a GPG key is important for security on clients.
+It is the task of the administrator to decide which keys are needed and can be trusted.
+A software channel cannot be assigned to a client when the GPG key is not trusted.
+====
+
+For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
 
 
 == Register Clients
